k8s/app-rollout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ci-cd-app
  namespace: ci-cd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ci-cd-app
  template:
    metadata:
      labels:
        app: ci-cd-app
    spec:
      containers:
      - name: app
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=CI/CD DevOps Pipeline is running!"
          - "-listen=:5000"
        ports:
        - containerPort: 5000
